application-testing-resiliency-demo/mirroring-demo/destination-rule-subseting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-app
  labels:
    demoMeshResource: "true"
    policyResource: "true"
spec:
  host: demo-app
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
