application-testing-resiliency-demo/mirroring-demo/virtual-service-traffic-mirroring.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-mirroring
  namespace: demo
  labels:
    demoMeshResource: "true"
    policyResource: "true"
spec:
  hosts:
    - demo-app
  http:
    - route:
      - destination:
          host: demo-app.demo.svc.cluster.local
          subset: v1
        weight: 100
      mirror:
        host: demo-app.demo.svc.cluster.local
        subset: v2
        mirrorPercentage:
          value: 100.0
